--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,10 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-datastore</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
