Removed mock comments convert wikimedia api into edit comment

--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
         <version>2.2.0</version>
         <configuration>
           <!-- TODO: set project ID. -->
-          <deploy.projectId>dnsenga-step-2020</deploy.projectId>
+          <deploy.projectId>wikiloop-step-capstone-2020</deploy.projectId>
           <deploy.version>1</deploy.version>
         </configuration>
       </plugin>
