--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,8 @@
         <artifactId>appengine-maven-plugin</artifactId>
         <version>2.2.0</version>
         <configuration>
-          <!-- TODO: set project ID. -->
+          <!-- TODO: set project ID to wikiloop-step-capstone-2020. -->
+          <!--deploy.projectId>wikiloop-step-capstone-2020</deploy.projectId-->
           <deploy.projectId>dnsenga-step-2020</deploy.projectId>
           <deploy.version>1</deploy.version>
         </configuration>
