--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,7 @@
         <artifactId>appengine-maven-plugin</artifactId>
         <version>2.2.0</version>
         <configuration>
-          <!-- TODO: set project ID. -->
+          <port>8081</port>
           <deploy.projectId>wikiloop-step-capstone-2020</deploy.projectId>
           <deploy.version>1</deploy.version>
         </configuration>
