--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
     <groupId>org.json</groupId>
     <artifactId>json</artifactId>
     <version>20200518</version>
+   </dependency>
+   <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+<dependency>
+    <groupId>org.apache.httpcomponents</groupId>
+    <artifactId>httpclient</artifactId>
+    <version>4.5.12</version>
 </dependency>
 
     <dependency>
@@ -51,10 +57,39 @@
       <version>2.5.0</version>
     </dependency>
     <dependency>
-     <groupId>com.google.appengine</groupId>
-     <artifactId>appengine-api-1.0-sdk</artifactId>
-     <version>1.9.59</version>
+      <groupId>com.google.appengine</groupId>
+      <artifactId>appengine-api-1.0-sdk</artifactId>
+      <version>1.9.59</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.appengine/appengine-testing -->
+    <dependency>
+      <groupId>com.google.appengine</groupId>
+      <artifactId>appengine-testing</artifactId>
+      <version>1.9.81</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.appengine</groupId>
+      <artifactId>appengine-api-labs</artifactId>
+      <version>1.9.60</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.appengine</groupId>
+      <artifactId>appengine-api-stubs</artifactId>
+      <version>1.9.60</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.appengine</groupId>
+      <artifactId>appengine-tools-sdk</artifactId>
+      <version>1.9.60</version>
+      <scope>test</scope>
+    </dependency> 
+
     <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
@@ -103,6 +138,16 @@
       <artifactId>commons-lang</artifactId>
       <version>2.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.quartz-scheduler</groupId>
+      <artifactId>quartz</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.quartz-scheduler</groupId>
+      <artifactId>quartz-jobs</artifactId>
+      <version>2.3.0</version>
+    </dependency>
      <!-- Testing Dependencies-->
     <dependency>
       <groupId>org.mockito</groupId>
@@ -148,6 +193,8 @@
           <port>8081</port>
           <deploy.projectId>wikiloop-step-capstone-2020</deploy.projectId>
           <deploy.version>1</deploy.version>
+          <mainClass>com.google.sps.tools.OnDemandProcessing</mainClass>
+         <cleanupDaemonThreads>false</cleanupDaemonThreads>
         </configuration>
       </plugin>
     </plugins>
