--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
       <artifactId>okhttp</artifactId>
       <version>2.5.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
+<dependency>
+    <groupId>com.squareup.okhttp3</groupId>
+    <artifactId>okhttp</artifactId>
+    <version>4.8.1</version>
+</dependency>
+
     <dependency>
       <groupId>com.google.appengine</groupId>
       <artifactId>appengine-api-1.0-sdk</artifactId>
